# catan_breakdown

./: PLAN.md  Procfile  README.md  hex_grid_vertices.py  pyproject.toml  railway.toml  requirements.txt
app/: board_viz.py  config.py  geo.py  main.py  ui_helpers.py
catan_breakdown/: .gitignore  README.md  requirements.txt  setup.py
catan_breakdown/catan/: board.py  game_class.py  game_flow.py  player_class.py  read_games.py  recommender.py  robber_class.py  scoring.py  trade_class.py  turn_class.py
catan_breakdown/scripts/: basic_catan_exploration.py  build_timing.py  dice_fairness_check.py  generate_advanced_charts.py  generate_placement_charts.py  longest_road_largest_army_value.py  read_games.py  resource_value.py  scrape_colonist_profile.py  starting_placement_sim.py  train_cli.py
catan_breakdown/scripts/start_number_variance/: start_number_variance.py  start_number_variance_analysis.py  start_number_variance_analysis_v2.py
catan_breakdown/tests/: test_board.py  test_distance_rule.py  test_draft.py  test_game_flow.py  test_recommender.py  test_scoring.py
